--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
     //Firebase
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
+    implementation 'com.synnapps:carouselview:0.1.5'
     implementation 'com.firebase:firebase-client-android:2.5.2'
     implementation 'com.google.firebase:firebase-core:16.0.5'
     implementation 'com.google.firebase:firebase-auth:16.0.4'
